--- a/dada/templates/mail_sending_options.tmpl
+++ b/dada/templates/mail_sending_options.tmpl
@@ -5,12 +5,25 @@
 <!-- tmpl_set name="title" value="Mail Sending &#187; Options" -->
 <div id="screen_meta" data-menu_highlight="mail_sending_options"></div>
 
-<div id="screentitle"> 
-	<div id="screentitlepadding">
-		<!-- tmpl_var title --> 
-	</div> 
-	<!-- tmpl_include help_link_widget.tmpl -->
+<div class="row">
+	<div class="medium-10 small-9 columns">
+	   	<nav class="breadcrumbs">	
+		 	 <a href="#" class="unavailable">
+				Mail Sending
+			 </a>
+	 	    <a 
+				href="#"
+				class="current"
+			>	
+				Option
+			</a>
+		</nav>
+	</div>
+	<div class="medium-2 small-3 columns text-right">
+	   <!-- tmpl_include help_link_widget.tmpl -->
+	</div>
 </div>
+
 
 <div id="mail_sending_options"></div> 
 
