--- a/dada/templates/change_info_screen.tmpl
+++ b/dada/templates/change_info_screen.tmpl
@@ -6,12 +6,22 @@
 
 
 <div class="row">
-   <div class="small-9 medium-8 columns">
-      <!-- tmpl_var title -->
-   </div>
-    <div class="small-3 medium-4 columns right">
-     <!-- tmpl_include help_link_widget.tmpl -->
-    </div>
+	<div class="medium-10 small-9 columns">
+	   	<nav class="breadcrumbs">	
+		 	 <a href="#" class="unavailable">
+				Your Mailing List
+			 </a>
+	 	    <a 
+				href="#"
+				class="current"
+			>	
+				List Information
+			</a>
+		</nav>
+	</div>
+	<div class="medium-2 small-3 columns text-right">
+	   <!-- tmpl_include help_link_widget.tmpl -->
+	</div>
 </div>
 
 
