--- a/dada/templates/list_options_screen.tmpl
+++ b/dada/templates/list_options_screen.tmpl
@@ -8,12 +8,25 @@
 <div id="screen_meta" data-menu_highlight="list_options"></div>
 <div id="list_options"></div> 
 
-<div id="screentitle"> 
-    <div id="screentitlepadding">
-        <!-- tmpl_var title --> 
-    </div> 
-    <!-- tmpl_include help_link_widget.tmpl -->
-</div> 
+
+<div class="row">
+	<div class="medium-10 small-9 columns">
+	   	<nav class="breadcrumbs">	
+		 	 <a href="#" class="unavailable">
+				Your Mailing List
+			 </a>
+	 	    <a 
+				href="#"
+				class="current"
+			>	
+				Options
+			</a>
+		</nav>
+	</div>
+	<div class="medium-2 small-3 columns text-right">
+	   <!-- tmpl_include help_link_widget.tmpl -->
+	</div>
+</div>
 
 <!-- tmpl_if done -->
     <!-- tmpl_include changes_saved_dialog_box_widget.tmpl  -->
