--- a/dada/templates/mailing_sending_mass_mailing_options_screen.tmpl
+++ b/dada/templates/mailing_sending_mass_mailing_options_screen.tmpl
@@ -8,13 +8,24 @@
 
 
 <!-- tmpl_set name="title" value="Mail Sending &#187; Mass Mailing Options" -->
-<div id="screentitle"> 
-	<div id="screentitlepadding">
-		<!-- tmpl_var title --> 
-	</div> 
-	<!-- tmpl_include help_link_widget.tmpl -->
+<div class="row">
+	<div class="medium-10 small-9 columns">
+	   	<nav class="breadcrumbs">	
+		 	 <a href="#" class="unavailable">
+				Mail Sending
+			 </a>
+	 	    <a 
+				href="#"
+				class="current"
+			>	
+				Mass Mailing Options
+			</a>
+		</nav>
+	</div>
+	<div class="medium-2 small-3 columns text-right">
+	   <!-- tmpl_include help_link_widget.tmpl -->
+	</div>
 </div>
-
 
 
 <!-- tmpl_if done -->
