--- a/dada/templates/web_services.tmpl
+++ b/dada/templates/web_services.tmpl
@@ -1,11 +1,24 @@
 <!-- begin web_services.tmpl --> 
 
 <!-- tmpl_set name="title" value="Your Mailing List &#187; Web Services" -->
-<div id="screentitle"> 
-	<div id="screentitlepadding">
-		<!-- tmpl_var title -->
+
+<div class="row">
+	<div class="medium-10 small-9 columns">
+	   	<nav class="breadcrumbs">	
+		 	 <a href="#" class="unavailable">
+				Your Mailing List
+			 </a>
+	 	    <a 
+				href="#"
+				class="current"
+			>	
+				Web Services API
+			</a>
+		</nav>
 	</div>
-	<!-- tmpl_include help_link_widget.tmpl -->
+	<div class="medium-2 small-3 columns text-right">
+	   <!-- tmpl_include help_link_widget.tmpl -->
+	</div>
 </div>
 <div id="screen_meta" data-menu_highlight="web_services"></div>
 
