--- a/dada/templates/mailing_sending_mass_mailing_options_screen.tmpl
+++ b/dada/templates/mailing_sending_mass_mailing_options_screen.tmpl
@@ -32,304 +32,232 @@
 	<!-- tmpl_include changes_saved_dialog_box_widget.tmpl  -->
 <!--/tmpl_if-->
 
-
-
-
-
-<form name="default_form" id="default_form" action="<!-- tmpl_var name="S_PROGRAM_URL" -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
-
-
-
-
-<fieldset>
-
-<legend>
- Batch Sending Options
-</legend>
-
-
-<p>
- Setting your batch settings to send at a higher rate than what is allowed 
- for your hosting account will cause problems with email delivery. 
-</p>
-    
-
-<table> 
- <tr>
-  <td>
-   <input type="checkbox" name="enable_bulk_batching" id="enable_bulk_batching" class="previewBatchSendingSpeed" value="1" <!-- tmpl_if list_settings.enable_bulk_batching -->checked="checked"<!--/tmpl_if--> >
-  </td>
-  <td>
-   <p>
-    <label for="enable_bulk_batching">
-     Enable Batch Sending
-    </label>
-   </p>
-
-
-<div class="alert-box info radius">
-<!-- tmpl_if show_amazon_ses_options --> 
-	<div id="amazon_ses_get_stats_loading"></div> 
-	<div id="amazon_ses_get_stats"></div> 
-
-<!-- /tmpl_if --> 
-<div id="previewBatchSendingSpeed_loading"></div> 
-<div id="previewBatchSendingSpeed"></div> 
-</div>
-
-
-<div id="manual_batch_settings"> 
+<form 
+	name="default_form" 
+	id="default_form" 
+	action="<!-- tmpl_var name="S_PROGRAM_URL" -->" 
+	method="post" 
+	accept-charset="<!-- tmpl_var HTML_CHARSET -->"
+>
+	<input type="hidden" name="process" value="1" >
+	<input type="hidden" name="flavor"  value="mailing_sending_mass_mailing_options" >
 	
-	<fieldset> 
-    <p>
-     Send: 
+	<fieldset>
+		<legend>
+			Batch Sending Options
+		</legend>
+		
+		<div class="alert-box warning radius">
+			Setting your batch settings to send at a higher rate than what is allowed 
+			for your hosting account will cause problems with email delivery. 
+		</div>
+		
+		<div class="row">
+			<div class="small-12 columns">
+				<input 
+					type="checkbox" 
+					name="enable_bulk_batching"
+					id="enable_bulk_batching"
+					class="previewBatchSendingSpeed"
+					value="1"
+					<!-- tmpl_if list_settings.enable_bulk_batching -->checked="checked"<!--/tmpl_if-->
+				>
+				<label for="enable_bulk_batching">
+					Enable Batch Sending
+				</label>
+			</div> 
+		</div>
+		
+		<!-- tmpl_if show_amazon_ses_options -->
+			<div class="row">
+				<div class="small-12 columns">							
+					<label for="amazon_ses_auto_batch_settings">
+						<input
+							type="checkbox"
+							name="amazon_ses_auto_batch_settings"
+							id="amazon_ses_auto_batch_settings"
+							value="1"
+							<!-- tmpl_if list_settings.amazon_ses_auto_batch_settings -->checked="checked"<!--/tmpl_if-->
+						>
+							<!-- tmpl_if expr="(type_of_service eq 'mandrill')" --> 
+								Automatically set batching speeds based on your Mandrill limits
+							<!-- tmpl_else --> 
+								Automatically set batching speeds based on your Amazon SES limits
+							<!-- /tmpl_if -->
+					</label>
+				</div>
+			</div>
+		<!-- /tmpl_if -->
+		
+		<div id="batch_setting_settings">
+			<div id="manual_batch_settings"> 
+				<div class="row">
+					<div class="small-12 columns">
+						<label>
+							Messages Sent Per Batch
+						</label>
+						<!-- tmpl_var mass_send_amount_menu -->
+					</div>
+				</div>
+				<div class="row">
+					<div class="small-12 columns">			
+						<label> 
+							Sleep Time Between Batches
+						</label>
+						<!-- tmpl_var bulk_sleep_amount_menu -->
+					</div>
+				</div>	
+			</div>
 
-	<!-- tmpl_var mass_send_amount_menu -->
- message(s) per batch
-     <br > 
-     and then wait and sleep: <!-- tmpl_var bulk_sleep_amount_menu --> second(s), before sending the next batch.
-    </p>
-   </fieldset>
 
-</div>
-
-<table  cellpadding="5">
-	<!-- tmpl_if show_amazon_ses_options -->
-			<tr>
-		  <td>
-		 
 	
-		  <input type="checkbox" name="amazon_ses_auto_batch_settings" id="amazon_ses_auto_batch_settings" value="1" <!-- tmpl_if list_settings.amazon_ses_auto_batch_settings -->checked="checked"<!--/tmpl_if--> >
-		</td>
-		<td>
-		<p><label for="amazon_ses_auto_batch_settings">
-		    <!-- tmpl_if expr="(type_of_service eq 'mandrill')" --> 
-			    Automatically set batching speeds based on your Mandrill limits
-            <!-- tmpl_else --> 
-                Automatically set batching speeds based on your Amazon SES limits
-		    <!-- /tmpl_if -->
+	
+			<div class="alert-box info radius">
+				<!-- tmpl_if show_amazon_ses_options --> 
+					<div id="amazon_ses_get_stats_loading"></div> 
+					<div id="amazon_ses_get_stats"></div> 
+				<!-- /tmpl_if --> 
+				<div id="previewBatchSendingSpeed_loading"></div> 
+				<div id="previewBatchSendingSpeed"></div> 
+			</div>
+			
+			<div class="row">
+				<div class="small-12 columns">							
+					<input
+						type="checkbox"
+						name="adjust_batch_sleep_time"
+						id="adjust_batch_sleep_time"
+						value="1" 
+						<!-- tmpl_if list_settings.adjust_batch_sleep_time -->checked="checked"<!--/tmpl_if-->
+					>
+					<label for="adjust_batch_sleep_time">
+						Adjust Sleep Time 
+					</label>
+
+					<div class="alert-box info radius">
+						Sleep Time Between Batches 
+						will be adjusted automatically, 
+						depending on how long the batch took to complete.
+					</div>
+			
+				</div> 
+			</div>
+
+			<div class="row">
+				<div class="small-12 columns">							
+
+					<input 
+						type="checkbox" 
+						name="smtp_connection_per_batch" 
+						id="smtp_connection_per_batch" 
+						value="1" <!-- tmpl_if list_settings.smtp_connection_per_batch -->checked="checked"<!-- /tmpl_if -->
+					>
+					<label for="smtp_connection_per_batch"> 
+						Use One SMTP Connection per Batch
+					</label>
+					<div class="alert-box info radius">
+						<!-- tmpl_if expr="list_settings.sending_method eq 'smtp'" --> 
+							<p>SMTP Sending is enabled.</p>
+						<!-- tmpl_else --> 
+							<p>SMTP Sending is disabled.</p>
+						<!-- /tmpl_if --> 
+						<p>
+							Instead of connecting to the SMTP server for each message sent, one 
+							connection will be made for each batch. 
+						</p>
+					</div>
+				</div> 
+			</div>
+		</div>
+	</fieldset>
+
+	<fieldset>
+		<legend>
+			Auto Pickup Options
+		</legend> 
+		
+		<input 
+			type="checkbox" 
+			name="auto_pickup_dropped_mailings" 
+			id="auto_pickup_dropped_mailings" 
+			value="1" <!-- tmpl_if list_settings.auto_pickup_dropped_mailings -->checked="checked"<!--/tmpl_if-->
+		>
+		<label for="auto_pickup_dropped_mailings">
+			Auto-Pickup Dropped Mass Mailings
 		</label>
-		<br >
-		<!-- tmpl_if expr="(type_of_service eq 'mandrill')" --> 
-	        Batch settings will automatically adjust, based on your Mandrill limits and number of messages sent in the last 24 hours. </p>		
-		<!-- tmpl_else -->
-		    Batch settings will automatically adjust, based on your Amazon SES limits and number of messages sent in the last 24 hours. </p>
-		<!-- /tmpl_if --> 
-		</td>
-	</tr>
-	<!-- /tmpl_if --> 
+		<div class="alert-box info radius">
+			Mass mailing can be a lengthy process and can sometimes get interrupted by the server. 
+			Activating this options safeguards against this issue by automatically reloading 
+			a mailing from the point that it was stopped.
+		</div>
+		
+		<!-- tmpl_if comment -->
+			<input 
+				type="checkbox"
+				name="restart_mailings_after_each_batch"
+				id="restart_mailings_after_each_batch"
+				value="1"
+				<!-- tmpl_if list_settings.restart_mailings_after_each_batch -->checked="checked"<!--/tmpl_if-->
+			>
+			<label for="restart_mailings_after_each_batch">
+				Reload Mailings After Each Batch
+			</label>
 
- <tr>
-  <td>
-   <input type="checkbox" name="adjust_batch_sleep_time" id="adjust_batch_sleep_time" value="1" <!-- tmpl_if list_settings.adjust_batch_sleep_time -->checked="checked"<!--/tmpl_if--> >
-  </td>
-  <td>
-   <p>
-    <label for="adjust_batch_sleep_time">
-     Adjust Sleep Time 
-    </label>
-    <br >
+			<p>This option should <em>only</em> be used if the <code>sleep()</code> Perl function is not working properly. 
+			Enabling this option will also <strong>require</strong> you to use the web-based mailing monitor for successfully mailings.
+		<!-- /tmpl_if -->
+		
+	</fieldset>
 
-    The time <!-- tmpl_var PROGRAM_NAME --> <code>sleep()</code>s between batches will be adjusted, 
-    depending on how long the batch took to complete.
-   </p>
-  </td>
- </tr>
-
-
-	 <tr>
-	  <td>
-	    <input type="checkbox" name="smtp_connection_per_batch" id="smtp_connection_per_batch" value="1" <!-- tmpl_if list_settings.smtp_connection_per_batch -->checked="checked"<!-- /tmpl_if --> >
-	  </td>
-	  <td>
-	   <p>
-	    <label for="smtp_connection_per_batch"> 
-	     Use One SMTP Connection per Batch <em>(Experimental)</em> 
-	    </label>
-	    <br >
-	<!-- tmpl_if expr="list_settings.sending_method eq 'smtp'" --> 
-		<p class="alert">
-			SMTP Sending is enabled.
-		</p>
-	<!-- tmpl_else --> 
-		<p class="alert">
-			SMTP Sending is disabled.
-		</p>	
-	<!-- /tmpl_if --> 
-
-	<p>
-	Instead of connecting to the SMTP server for each message sent, one connection will be made for each batch. 
-	</p>
-
-	<p>
-	Checking this option may help mass sending times. 
-	</p>
-	<!-- 
-	<p>Your SMTP Server may not allow for more than one message to be sent per connection, so if sending appears not to be working, 
-		do not use this option.
-	</p>
-	-->
-
-	  </td>
-
-
-	 </tr>
-	
-</table>
-
-</td>
-
-</tr>
-	
-</table>
-
-
-
-
-</fieldset>
-
-
-
-<fieldset>
-<legend>
- Auto Pickup Options
-</legend> 
-
-<table>
- <tr>
-  <td>
-   <input type="checkbox" name="auto_pickup_dropped_mailings" id="auto_pickup_dropped_mailings" value="1" <!-- tmpl_if list_settings.auto_pickup_dropped_mailings -->checked="checked"<!--/tmpl_if--> >
-  </td>
-  <td>
-   <p>
-    <label for="auto_pickup_dropped_mailings">
-     Auto-Pickup Dropped Mass Mailings
-    </label>
-    <br >
-
-
-Since sending to your entire mailing list is usually a lengthy process (for most mailing lists), it can sometimes get interrupted by the server and won't proceed to completion. Activating this feature safeguards against this problem by automatically reloading a mailing from the point that it was dropped.
-
-
-    
-    
-    <table>
-     <tr>
-      <td>
-       <input type="checkbox" name="restart_mailings_after_each_batch" id="restart_mailings_after_each_batch" value="1" <!-- tmpl_if list_settings.restart_mailings_after_each_batch -->checked="checked"<!--/tmpl_if--> >
-      </td>
-      <td>
-       <p>
-        <label for="restart_mailings_after_each_batch">
-         Reload Mailings After Each Batch
-        </label>
-        <br >
-       
-        Instead of having <!-- tmpl_var PROGRAM_NAME --> automatically <code>sleep()</code> between mailings, enabling this option will 
-        reload the mailing between batches manually. 
-	</p>
-	
-	<p>This option should <em>only</em> be used if the <code>sleep()</code> Perl function is not working properly. 
-	   Enabling this option will also <strong>require</strong> you to use the web-based mailing monitor for successfully mailings.
-
-        
-    
-       </p>
-      </td>
-     </tr>
-    
-    </table>
-
-
-    
-   </p>
-  </td> 
- </tr>
-
-</table>
-
-</fieldset>
-
-<fieldset> 
-	<legend>Notifications</legend>
-	
-<table> 
-	 <tr>
-	  <td>
-	   <input type="checkbox" name="mass_mailing_send_to_list_owner" id="mass_mailing_send_to_list_owner" value="1" <!-- tmpl_if list_settings.mass_mailing_send_to_list_owner -->checked="checked"<!--/tmpl_if--> >
-	  </td>
-	  <td>
-	   <p>
-	    <label for="mass_mailing_send_to_list_owner">
-	     Send Mass Mailing Messages to the List Owner
-	    </label>
-	    <br >
-		The List Owner will receive a copy of all mass mailings sent to your Mailing List. 
-	   </p>
-	  </td>
-	 </tr>
-	
-
-	 <tr>
-	 
-	 <td>
-	   <input type="checkbox" name="get_finished_notification" id="get_finished_notification" value="1" <!-- tmpl_if list_settings.get_finished_notification -->checked="checked"<!--/tmpl_if--> >
-	  </td>
-	
-	  <td>
-	   <p>
-	    <label for="get_finished_notification">
-	     Send Finishing Message
-	    </label>
-	    <br >
-	    The List Owner will be emailed when all the messages of mass mailings have been sent.
-	   </p>
-	  </td>
-	</tr>
-	</table> 
-
-</fieldset>
-
-
-<fieldset> 
-	<legend>Logging</legend>
-	
-<table> 
-	 <tr>
-	  <td>
-	   <input type="checkbox" name="mass_mailing_save_logs" id="mass_mailing_save_logs" value="1" <!-- tmpl_if list_settings.mass_mailing_save_logs -->checked="checked"<!--/tmpl_if--> >
-	  </td>
-	  <td>
-	   <p>
-	    <label for="mass_mailing_save_logs">
+	<fieldset> 
+		<legend>
+			Notifications
+		</legend>
+		<input 
+			type="checkbox" 
+			name="mass_mailing_send_to_list_owner"
+			id="mass_mailing_send_to_list_owner"
+			value="1" 
+			<!-- tmpl_if list_settings.mass_mailing_send_to_list_owner -->checked="checked"<!--/tmpl_if-->
+		>
+		<label for="mass_mailing_send_to_list_owner">
+			Send the List Owner Mass Mailings
+		</label>
+		<input 
+			type="checkbox" 
+			name="get_finished_notification" 
+			id="get_finished_notification" 
+			value="1" 
+			<!-- tmpl_if list_settings.get_finished_notification -->checked="checked"<!--/tmpl_if--> 
+		>
+		<label for="get_finished_notification">
+			Send, "Mass Mailing Completed" Notification to List Owner
+		</label>
+	</fieldset>
+	<fieldset> 
+		<legend>
+			Logging
+		</legend>
+		<input
+			type="checkbox" 
+			name="mass_mailing_save_logs" 
+			id="mass_mailing_save_logs" 
+			value="1" 
+			<!-- tmpl_if list_settings.mass_mailing_save_logs -->checked="checked"<!--/tmpl_if-->
+		>
+		<label for="mass_mailing_save_logs">
 			Save Mass Mailing Logs
-	    </label>
-	    <br >
-		View/Download mass mailing logs after a mass mailing has been completed. 
-	   </p>
-	  </td>
-	 </tr>
-	
-</table> 
-
-</fieldset>
-
-
-
-
-
-<input type="hidden" name="process" value="1" >
-<input type="hidden" name="flavor"       value="mailing_sending_mass_mailing_options" >
-<div class="buttonfloat">
- <input type="reset"  class="cautionary" value="Clear Changes" >
- <input type="submit" class="processing" value="Save Sending Options" >
-</div>
-<div class="floatclear"></div>
-
+		</label>
+	</fieldset>
+	<ul class="button-group right">
+	    <li>
+			<input type="reset"  class="button cautionary" value="Clear Changes">
+		</li>
+		<li>
+			<input type="submit" class="button processing" value="Save Sending Options">
+		</li>
+	</ul>
 </form> 
-
-
-
 
 
 <!-- end mailing_sending_mass_mailing_options_screen.tmpl -->
